force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/MPM4_BASE__Milestone1_Expense__c.object-meta.xml
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - The expense object captures monetary expenses for a milestone task.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>PEXP-{0000}</displayFormat>
        <label>Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>