force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/fields/MPM4_BASE__Billable__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this expense billable?</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>