force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/fields/MPM4_BASE__Date_Incurred__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Date_Incurred__c</fullName>
    <inlineHelpText>The date the expense was charged. Defaults to today if left blank.</inlineHelpText>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>