force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/fields/MPM4_BASE__Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Description__c</fullName>
    <inlineHelpText>A description about the expense. For example, why was the expense incurred.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>