force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/fields/MPM4_BASE__Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who charged the expense. Defaults to current user if left blank.</inlineHelpText>
    <label>Incurred By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Expenses_Incurred</relationshipName>
    <type>Lookup</type>
</CustomField>