force-app/main/default/objects/MPM4_BASE__Milestone1_Expense__c/fields/MPM4_BASE__Incurred_By_Resource__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Incurred_By_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The resource who charged the expense.</inlineHelpText>
    <label>Incurred By Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipName>Resource_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>